2022/09/02 dog post deco2

--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -233,24 +233,46 @@
 
         <!-- Panel trait -->
         <div class="col-lg-6 col-12 bg-info">
-          <div class="row">
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 1</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 2</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 3</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 4</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 5</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 6</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 7</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 8</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 9</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 10</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 11</div>
-            <div class="col-xl-4 col-6 panel-trait">panel breed trait 12</div>
+          <div class="row g-3">
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 1</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 2</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 3</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 4</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 5</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 6</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 7</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 8</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 9</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 10</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 11</div>
+            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 12</div>
           </div>
         </div>
 
         <!-- Breed info -->
-        <div class="col-lg-6 col-12 bg-danger">BREED INFO</div>
+        <div class="col-lg-6 col-12 bg-danger">
+          <div class="row">
+            
+            <div class="border">
+              <div class="col-12">
+                종 설명
+              </div>
+              <div class="col-12">
+                BREED DESCRIPTION
+              </div>
+            </div>
+
+            <div class="border">
+              <div class="col-12">
+                보호소 소견
+              </div>
+              <div class="col-12">
+                보호소 소견 설명
+              </div>
+            </div>
+
+          </div>
+        </div>
 
       </div>
 
