--- a/templates/find_dog.html
+++ b/templates/find_dog.html
@@ -70,23 +70,17 @@
   <nav class="navbar navbar-expand navbar-light py-3 sticky-top" id="navbar2" aria-label="dog-navbar2">
     <div class="container" id="dog-navbar2">
       <ul class="navbar-nav filter-search-nav">
-        <!-- NAV-FILTER -->
-        <li class="nav-item me-2">
-          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
-            전체 지역
-          </a>
-        </li>
 
-        <li class="nav-item me-2">
-          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
-            전체 종
-          </a>
-        </li>
-
-        <!-- SEARCH ICON -->
+        <!-- NAV-FILTER SEARCH -->
         <li class="nav-item me-2">
           <a class="nav-link dog-search filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
             <i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i>
+          </a>
+        </li>
+
+        <li class="nav-item me-2">
+          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
+            검색
           </a>
         </li>
 
