--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -70,23 +70,17 @@
   <nav class="navbar navbar-expand navbar-light py-3 sticky-top" id="navbar2" aria-label="dog-navbar2">
     <div class="container" id="dog-navbar2">
       <ul class="navbar-nav filter-search-nav">
-        <!-- NAV-FILTER -->
-        <li class="nav-item me-2">
-          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
-            전체 지역
-          </a>
-        </li>
-
-        <li class="nav-item me-2">
-          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
-            전체 종
-          </a>
-        </li>
-
-        <!-- SEARCH ICON -->
+        
+        <!-- NAV-FILTER SEARCH -->
         <li class="nav-item me-2">
           <a class="nav-link dog-search filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
             <i class="fa-solid fa-magnifying-glass fa-lg dog-search-icon"></i>
+          </a>
+        </li>
+
+        <li class="nav-item me-2">
+          <a class="nav-link filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
+            검색
           </a>
         </li>
 
@@ -214,45 +208,141 @@
       <!-- Dog post header -->
       <div class="dog-post-header row justify-content-center bg-warning">
         <!-- Dog post img -->
-        <img class="dog-post-img d-block col-12 col-lg-5 bg-light" src={popfile} alt="dog photo">
+        <div class="col-12 col-lg-5 align-items-center justify-content-center d-flex bg-danger">
+          <img class="dog-post-img d-block" src={popfile} alt="dog photo">
+        </div>
 
         <!-- Dog basic info -->
         <div class="col-12 col-lg-7 bg-danger basic-info-container">
-          <div class="row h-50">
-            <div class="col-4 bg-info">{kindCd}</div>
-            <div class="col-4 bg-light">{sexCd}</div>
-            <div class="col-4 bg-info">{age}</div>
-          </div>
+          <div class="row h-100">
 
-          <div class="row h-50">
-            <div class="col-4 bg-light">{neuterYn}</div>
-            <div class="col-4 bg-danger">{colorCd}</div>
-            <div class="col-4 bg-light">{weight}</div>
+            <div class="col-4 p-2 bg-info">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>{kindCd}</h4>
+              </div>
+            </div>
+
+            <div class="col-4 p-2 bg-light">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>{sexCd}</h4>
+              </div>
+            </div>
+
+            <div class="col-4 p-2 bg-info">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>{age}</h4>
+              </div>
+            </div>
+
+            <div class="col-4 p-2 bg-light">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>{neuterYn}</h4>
+              </div>
+            </div>
+
+            <div class="col-4 p-2 bg-danger">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>{colorCd}</h4>
+              </div>
+            </div>
+
+            <div class="col-4 p-2 bg-light">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>{weight}</h4>
+              </div>
+            </div>
+            
+            <div class="col-12 p-2 bg-light">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>공고번호 : {noticeNo}</h4>
+              </div>
+            </div>
+            
+            <div class="col-12 p-2 bg-light">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>공고기간 : {noticeSdt} ~ {noticeEdt}</h4>
+              </div>
+            </div>
+            
+            <div class="col-12 p-2 bg-light">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                <h4>발견장소 : {happenPlace}</h4>
+              </div>
+            </div>
+            
           </div>
         </div>
 
         <!-- Panel trait -->
-        <div class="col-lg-6 col-12 bg-info">
-          <div class="row g-3">
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 1</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 2</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 3</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 4</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 5</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 6</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 7</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 8</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 9</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 10</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 11</div>
-            <div class="panel-trait col-xl-4 col-6 border">panel breed trait 12</div>
+        <div class="col-lg-6 col-12 panel-trait-container bg-info">
+          <div class="row">
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 1
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 2
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 3
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 4
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 5
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 6
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 7
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 8
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 9
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 10
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 11
+              </div>
+            </div>
+            <div class="panel-trait col-xl-4 col-6 p-2">
+              <div class="h-100 align-items-center justify-content-center d-flex border">
+                panel breed trait 12
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Breed info -->
-        <div class="col-lg-6 col-12 bg-danger">
-          <div class="row">
-            
+        <div class="col-lg-6 col-12 breed-info-container bg-danger">
+          <div class="row h-100">
+
             <div class="border">
               <div class="col-12">
                 종 설명
@@ -268,6 +358,68 @@
               </div>
               <div class="col-12">
                 보호소 소견 설명
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Dog cost & warning -->
+        <div class="col-lg-6 col-12 bg-light">
+          <div class="row h-100">
+
+            <!-- Dog cost -->
+            <div class="col-lg-6 col-12 bg-danger">
+              비용
+            </div>
+
+            <!-- Dog warning -->
+            <div class="col-lg-6 col-12 bg-warning">
+              주의사항
+            </div>
+
+          </div>
+        </div>
+
+        <!-- Care center & region -->
+        <div class="col-lg-6 col-12 bg-info">
+          <div class="row h-100">
+
+            <!-- Care center -->
+            <div class="col-sm-6 col-12 bg-info">
+              <div class="row border h-100">
+
+                <div class="col-12 align-items-start">
+                  보호센터
+                </div>
+
+                <div class="col-12 align-items-center">
+                  {careNm}
+                </div>
+
+                <div class="col-12 align-items-end">
+                  {careTel}
+                </div>
+
+              </div>
+            </div>
+
+            <!-- Care region -->
+            <div class="col-sm-6 col-12 bg-warning">
+              <div class="row border h-100">
+
+                <div class="col-12 align-items-start">
+                  담당부서
+                </div>
+
+                <div class="col-12 align-items-center">
+                  {orgNm}
+                </div>
+
+                <div class="col-12 align-items-end">
+                  {officetel}
+                </div>
+                
               </div>
             </div>
 
