--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -70,7 +70,7 @@
   <nav class="navbar navbar-expand navbar-light py-3 sticky-top" id="navbar2" aria-label="dog-navbar2">
     <div class="container" id="dog-navbar2">
       <ul class="navbar-nav filter-search-nav">
-        
+
         <!-- NAV-FILTER SEARCH -->
         <li class="nav-item me-2">
           <a class="nav-link dog-search filter-search-links" data-bs-toggle="modal" data-bs-target="#filterModal">
@@ -218,124 +218,137 @@
 
             <div class="col-4 p-2 bg-info">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>{kindCd}</h4>
+                <h4 class="m-0">종 : {kindCd}</h4>
               </div>
             </div>
 
             <div class="col-4 p-2 bg-light">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>{sexCd}</h4>
+                <h4 class="m-0">성 : {sexCd}</h4>
               </div>
             </div>
 
             <div class="col-4 p-2 bg-info">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>{age}</h4>
+                <h4 class="m-0">나이 : {age}</h4>
               </div>
             </div>
 
             <div class="col-4 p-2 bg-light">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>{neuterYn}</h4>
+                <h4 class="m-0">중성화 여부 : {neuterYn}</h4>
               </div>
             </div>
 
             <div class="col-4 p-2 bg-danger">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>{colorCd}</h4>
+                <h4 class="m-0">색깔 : {colorCd}</h4>
               </div>
             </div>
 
             <div class="col-4 p-2 bg-light">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>{weight}</h4>
+                <h4 class="m-0">몸무게 : {weight}</h4>
               </div>
             </div>
-            
+
             <div class="col-12 p-2 bg-light">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>공고번호 : {noticeNo}</h4>
+                <h4 class="m-0">공고번호 : {noticeNo}</h4>
               </div>
             </div>
-            
+
             <div class="col-12 p-2 bg-light">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>공고기간 : {noticeSdt} ~ {noticeEdt}</h4>
+                <h4 class="m-0">공고기간 : {noticeSdt} ~ {noticeEdt}</h4>
               </div>
             </div>
-            
+
             <div class="col-12 p-2 bg-light">
               <div class="h-100 align-items-center justify-content-center d-flex border">
-                <h4>발견장소 : {happenPlace}</h4>
+                <h4 class="m-0">발견장소 : {happenPlace}</h4>
               </div>
             </div>
-            
+
           </div>
         </div>
 
         <!-- Panel trait -->
         <div class="col-lg-6 col-12 panel-trait-container bg-info">
           <div class="row">
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 1
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 2
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 3
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 4
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 5
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 6
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 7
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 8
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 9
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 10
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 11
               </div>
             </div>
+
             <div class="panel-trait col-xl-4 col-6 p-2">
               <div class="h-100 align-items-center justify-content-center d-flex border">
                 panel breed trait 12
               </div>
             </div>
+
           </div>
         </div>
 
@@ -343,21 +356,45 @@
         <div class="col-lg-6 col-12 breed-info-container bg-danger">
           <div class="row h-100">
 
-            <div class="border">
-              <div class="col-12">
-                종 설명
-              </div>
-              <div class="col-12">
-                BREED DESCRIPTION
+            <div class="col-12">
+              <div class="row h-100">
+
+                <div class="col-12 p-2 h-25">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    <h5>
+                      종 설명
+                    </h5>
+                  </div>
+                </div>
+
+                <div class="col-12 p-2 h-75">
+                  <div class="h-100 align-items-center justify-content-center d-flex flex-column border">
+                    <p>BREED DESCRIPTION</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed et quidem repellat quos deserunt quisquam, maiores sint unde consequatur cumque, inventore consectetur odio est consequuntur voluptate velit architecto?
+                      Aliquam, illo voluptatem! Eius veritatis aliquam blanditiis dolor laborum, doloribus cumque laboriosam assumenda voluptas. Quam est nostrum, corrupti dicta beatae alias vero.</p>
+                  </div>
+                </div>
+
               </div>
             </div>
 
-            <div class="border">
-              <div class="col-12">
-                보호소 소견
-              </div>
-              <div class="col-12">
-                보호소 소견 설명
+            <div class="col-12">
+              <div class="row h-100">
+
+                <div class="col-12 p-2 h-25">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    <h5>
+                      보호소 소견
+                    </h5>
+                  </div>
+                </div>
+
+                <div class="col-12 p-2 h-75">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    보호소 소견 설명
+                  </div>
+                </div>
+
               </div>
             </div>
 
@@ -369,36 +406,76 @@
           <div class="row h-100">
 
             <!-- Dog cost -->
-            <div class="col-lg-6 col-12 bg-danger">
-              비용
+            <div class="col-lg-6 col-12 bg-warning">
+              <div class="row h-100">
+
+                <div class="col-12 p-2 h-50">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    <h5>
+                      비용
+                    </h5>
+                  </div>
+                </div>
+
+                <div class="col-12 p-2 h-50">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    비용 설명
+                  </div>
+                </div>
+
+              </div>
             </div>
 
             <!-- Dog warning -->
-            <div class="col-lg-6 col-12 bg-warning">
-              주의사항
+            <div class="col-lg-6 col-12 bg-info">
+              <div class="row h-100">
+
+                <div class="col-12 p-2 h-50">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    <h5>
+                      주의사항
+                    </h5>
+                  </div>
+                </div>
+
+                <div class="col-12 p-2 h-50">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    주의사항 설명
+                  </div>
+                </div>
+
+              </div>
             </div>
 
           </div>
         </div>
 
         <!-- Care center & region -->
-        <div class="col-lg-6 col-12 bg-info">
+        <div class="col-lg-6 col-12">
           <div class="row h-100">
 
             <!-- Care center -->
-            <div class="col-sm-6 col-12 bg-info">
+            <div class="col-sm-6 col-12 bg-light">
               <div class="row border h-100">
 
-                <div class="col-12 align-items-start">
-                  보호센터
+                <div class="col-12 p-2 h-50">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    <h5>
+                      보호센터
+                    </h5>
+                  </div>
                 </div>
 
-                <div class="col-12 align-items-center">
-                  {careNm}
+                <div class="col-12 p-2 h-25">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    {careNm}
+                  </div>
                 </div>
 
-                <div class="col-12 align-items-end">
-                  {careTel}
+                <div class="col-12 p-2 h-25">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    {careTel}
+                  </div>
                 </div>
 
               </div>
@@ -408,18 +485,26 @@
             <div class="col-sm-6 col-12 bg-warning">
               <div class="row border h-100">
 
-                <div class="col-12 align-items-start">
-                  담당부서
+                <div class="col-12 p-2 h-50">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    <h5>
+                      담당부서
+                    </h5>
+                  </div>
                 </div>
 
-                <div class="col-12 align-items-center">
-                  {orgNm}
+                <div class="col-12 p-2 h-25">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    {orgNm}
+                  </div>
                 </div>
 
-                <div class="col-12 align-items-end">
-                  {officetel}
+                <div class="col-12 p-2 h-25">
+                  <div class="h-100 align-items-center justify-content-center d-flex border">
+                    {officetel}
+                  </div>
                 </div>
-                
+
               </div>
             </div>
 
