--- a/templates/dog_info.html
+++ b/templates/dog_info.html
@@ -352,12 +352,13 @@
           </div>
         </div>
 
-        <!-- Breed info -->
-        <div class="col-lg-6 col-12 breed-info-container bg-danger">
+
+        <div class="col-lg-6 col-12 breed-info-container">
           <div class="row h-100">
 
-            <div class="col-12">
-              <div class="row h-100">
+            <!-- Breed info -->
+            <div class="col-12 bg-warning">
+              <div class="row">
 
                 <div class="col-12 p-2 h-25">
                   <div class="h-100 align-items-center justify-content-center d-flex border">
@@ -370,16 +371,16 @@
                 <div class="col-12 p-2 h-75">
                   <div class="h-100 align-items-center justify-content-center d-flex flex-column border">
                     <p>BREED DESCRIPTION</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed et quidem repellat quos deserunt quisquam, maiores sint unde consequatur cumque, inventore consectetur odio est consequuntur voluptate velit architecto?
-                      Aliquam, illo voluptatem! Eius veritatis aliquam blanditiis dolor laborum, doloribus cumque laboriosam assumenda voluptas. Quam est nostrum, corrupti dicta beatae alias vero.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error ipsam rerum doloribus voluptate, maxime veritatis eius at sit fugiat qui earum perferendis assumenda, iure dignissimos pariatur libero quod repudiandae quo tempore dolorem magnam minus vel? Quis perferendis autem nemo natus. Corrupti eum doloremque magni ullam blanditiis temporibus nesciunt corporis minus?</p>
                   </div>
                 </div>
 
               </div>
             </div>
 
-            <div class="col-12">
-              <div class="row h-100">
+            <!-- Care comment -->
+            <div class="col-12 bg-danger">
+              <div class="row">
 
                 <div class="col-12 p-2 h-25">
                   <div class="h-100 align-items-center justify-content-center d-flex border">
