--- a/templates/survey.html
+++ b/templates/survey.html
@@ -62,7 +62,7 @@
 
   <!-------------------- SURVEY PAGE -------------------->
   <section class="container-fluid min-vh-100 px-0 align-items-center">
-    <div class="overlay-survey-page-section min-vh-100 survey-bg">
+    <div class="overlay-survey-page-section min-vh-100 survey-bg" style="background-image: url({{ url_for('static', filename='img/animated-dog-4.jpg') }})">
       <div class="container">
 
         <!-- Survey questions will be displayed here -->
