--- a/static/css/find_dog.css
+++ b/static/css/find_dog.css
@@ -9,14 +9,14 @@ html {
  * Body BG color
  */
 body {
-  background-color: #F5F5FA !important;
+  background-color: #90C9C2 !important;
 }
 
 /**
  * Find dog BG color
  */
 .find-dog-bg {
-  background-color: #F5F5FA;
+  /* background-color: #fefaf6; */
 }
 
 .card-body {
@@ -29,7 +29,7 @@ body {
  */
 #navbar,
 #navbar2 {
-  background-color: transparent;
+  background-color: #fefaf6;
 }
 
 /**
@@ -37,7 +37,7 @@ body {
  */
 #header.scrolled,
 #navbar2.scrolled {
-  background-color: #FFFFFF !important;
+  background-color: #fefaf6 !important;
   /* transition: background-color 300ms linear; */
 }
 
@@ -127,13 +127,14 @@ body {
 }
 
 .scroll-header {
-  box-shadow: 0 0 10px #19B394;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .dog-card:hover {
-  transition: 0.5s;
+  transition: 0.2s;
   box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .3) !important;
-  opacity: 0.7;
+  /* opacity: 0.7; */
+  transform: scale(1.05);
   cursor: pointer;
 }
 
@@ -158,6 +159,12 @@ body {
 /**
  * DOG LIST SECTION
  */
+.find-dog-bg {
+  background-size: 250px;
+  /* background-repeat: repeat; */
+  background-position: center center;
+  /* background-attachment: fixed; */
+}
 .overlay-dog-list-section .container {
   padding-top: 10rem;
 }
