--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -9,7 +9,7 @@ html {
  * Body BG color
  */
 body {
-  background-color: #F5F5FA !important;
+  background-color: #9398B5 !important;
 }
 
 /**
@@ -41,7 +41,7 @@ body {
  * NAVBAR
  */
 #navbar {
-  background-color: transparent;
+  background-color: #fefaf6;
 }
 
 /**
@@ -49,7 +49,7 @@ body {
  */
 #header.scrolled {
   background-color: #FFFFFF !important;
-  transition: background-color 300ms linear;
+  /* transition: background-color 300ms linear; */
 }
 
 #dog-navbar a,
@@ -108,12 +108,18 @@ body {
 }
 
 .scroll-header {
-  box-shadow: 0 0 10px #19B394;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 /**
  * SURVEY PAGE SECTION
  */
+.survey-bg {
+  background-size: 250px;
+  /* background-repeat: repeat; */
+  background-position: center top;
+  /* background-attachment: fixed; */
+}
 .overlay-survey-page-section .container {
   padding-top: 72px;
 }
@@ -123,8 +129,11 @@ body {
  */
 
 /* Survey Body */
+.sd-root-modern {
+  background-color: #9398B5;
+}
 .sd-body {
-  background-color: #F5F5FA;
+  background-color: #9398B5;
   /* background-color: #FFFFFF; */
 }
 
