--- a/templates/index.html
+++ b/templates/index.html
@@ -78,7 +78,7 @@
   </header>
 
   <!-------------------- HOME SECTION -------------------->
-  <section class="container-fluid min-vh-100 px-0 align-items-center bg-image" id="home-section" style="background-image: url({{ url_for('static', filename='img/home-bg-img.jpg') }})">
+  <section class="container-fluid min-vh-100 px-0 align-items-center bg-image" id="home-section" style="background-image: url({{ url_for('static', filename='img/animated-dog-1.jpg') }})">
     <div class="overlay-home-section min-vh-100">
       <div class="container" data-aos="fade-up" data-aos-delay="100" data-aos-once="true">
 
@@ -102,13 +102,13 @@
         <!-- 오늘 구조된 강아지 -->
         <div class="col-6 col-lg-3 d-flex align-items-stretch justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="card-stat card text-center" style="width: 14rem;">
-            <div class="card-body">
+            <div class="card-body stat-card-body">
               <h1 class="card-title">
-                <span class="counter rescued-today"></span><span> 마리</span>
+                <span class="counter rescued-today"></span>
               </h1>
             </div>
-            <div class="card-header">
-              오늘 구조된 강아지
+            <div class="card-header stat-card-header align-items-center justify-content-center d-flex">
+              <p class="m-0">금일<br>구조수</p>
             </div>
           </div>
         </div>
@@ -116,13 +116,13 @@
         <!-- 입양률 -->
         <div class="col-6 col-lg-3 d-flex align-items-stretch justify-content-center" data-aos="zoom-in" data-aos-delay="200">
           <div class="card-stat card text-center" style="width: 14rem;">
-            <div class="card-body">
+            <div class="card-body stat-card-body">
               <h1 class="card-title">
                 <span class="counter adopt-in-year"></span><span>%</span>
               </h1>
             </div>
-            <div class="card-header">
-              입양률
+            <div class="card-header stat-card-header align-items-center justify-content-center d-flex">
+              <p class="m-0">입양률</p>
             </div>
           </div>
         </div>
@@ -130,13 +130,13 @@
         <!-- 안락사율 -->
         <div class="col-6 col-lg-3 d-flex align-items-stretch justify-content-center" data-aos="zoom-in" data-aos-delay="300">
           <div class="card-stat card text-center" style="width: 14rem;">
-            <div class="card-body">
+            <div class="card-body stat-card-body">
               <h1 class="card-title">
                 <span class="counter death-in-year"></span><span>%</span>
               </h1>
             </div>
-            <div class="card-header">
-              안락사율
+            <div class="card-header stat-card-header align-items-center justify-content-center d-flex">
+              <p class="m-0">안락사율</p>
             </div>
           </div>
         </div>
@@ -144,13 +144,13 @@
         <!-- 임시 -->
         <div class="col-6 col-lg-3 d-flex align-items-stretch justify-content-center" data-aos="zoom-in" data-aos-delay="400">
           <div class="card-stat card text-center" style="width: 14rem;">
-            <div class="card-body">
+            <div class="card-body stat-card-body">
               <h1 class="card-title">
-                <span class="counter protect-in-year"></span><span> 마리</span>
+                <span class="counter protect-in-year"></span>
               </h1>
             </div>
-            <div class="card-header">
-              보호중인 강아지
+            <div class="card-header stat-card-header align-items-center justify-content-center d-flex">
+              <p class="m-0">보호중인<br>강아지</p>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
   </section>
 
   <!-------------------- FIND DOG SECTION -------------------->
-  <section class="container-fluid min-vh-100 px-0" id="find-dog-section" style="background-image: url({{ url_for('static', filename='img/find-dog-bg-img.jpg') }})">
+  <section class="container-fluid min-vh-100 px-0" id="find-dog-section" style="background-image: url({{ url_for('static', filename='img/animated-dog-5.jpg') }})">
     <div class="overlay-find-dog-section min-vh-100">
       <div class="container" data-aos="fade-right" data-aos-delay="200">
 
@@ -184,7 +184,7 @@
   </section>
 
   <!-------------------- SURVEY SECTION -------------------->
-  <section class="container-fluid min-vh-100 px-0" id="survey-section" style="background-image: url({{ url_for('static', filename='img/survey-bg-img.jpg') }})">
+  <section class="container-fluid min-vh-100 px-0" id="survey-section" style="background-image: url({{ url_for('static', filename='img/animated-dog-6.png') }})">
     <div class="overlay-survey-section min-vh-100">
       <div class="container" data-aos="fade-right" data-aos-delay="200">
 
